# weather_notifier

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  setup.cfg  tox.ini
alembic/: env.py
alembic/versions/: 7890db985616_initial_migration.py
api/: Dockerfile  README.md  dev-requirements.txt  entrypoint.sh  requirements.txt  setup.cfg
api/alembic/: env.py
api/alembic/versions/: 64e113ab3dbb_initial_commit.py  6b24343ec9b0_initial_commit.py
api/src/weather_notifier/: app.py  db.py  settings.py
api/src/weather_notifier/subscriptions/: models.py  routes.py  schemas.py  services.py
api/tests/: conftest.py  test_subscription_schema.py  test_subscription_services.py  test_subscriptions_route.py
notifier/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  requirements.txt  setup.cfg  tox.ini
notifier/src/notifier/: api_client.py  client.py  email_client.py  main.py  schemas.py  services.py  settings.py
notifier/tests/: test_services.py
src/weather_notifier/: app.py  db.py  exceptions.py  settings.py
src/weather_notifier/subscriptions/: models.py  routes.py  schemas.py  services.py
tests/: conftest.py  test_subscription_services.py  test_subscriptions_route.py
