[metadata]
name = weather_notifier
version = 0.1.0
description = A Weather Notifier API for subscribing to weather updates
author = Anders Bogsnes
author_email = andersbogsnes@gmail.com

[options]
install_requires =
    fastapi
    pydantic[email]
    uvicorn
    sqlalchemy
    psycopg2
    python-dotenv

package_dir =
    =src
packages = find:

[options.package_data]
* = py.typed

[options.extras_require]
test =
    pytest
    pytest-mock
    requests

dev =
    %(test)s
    tox
    pre-commit
    alembic

[options.packages.find]
where = src

[flake8]
max-line-length=100