[metadata]
name = notifier
version = 0.1.0
description = A Weather Notifier API for subscribing to weather updates
author = Anders Bogsnes
author_email = andersbogsnes@gmail.com

[options]
install_requires =
    attr
    pydantic[email]
    httpx
    python-dotenv
    schedule
    structlog

package_dir =
    =src
packages = find:

[options.package_data]
* = py.typed

[options.extras_require]
test =
    pytest
    pytest-mock

dev =
    %(test)s
    tox
    pre-commit

[options.entry_points]
console_scripts =
    notifier = notifier.main:run

[options.packages.find]
where = src

[flake8]
max-line-length=100

[mypy]
plugins = pydantic.mypy, sqlalchemy.ext.mypy.plugin
